fix wrap for discord

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,7 @@
 
 a{
     text-decoration: none;
-}
-  
+}  
 
 #main{
     background: #1D2B64;  /* fallback for old browsers */
@@ -31,7 +30,10 @@ a{
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+#banner{
+    margin-bottom: 1.5rem;
 }
 
 #banner>img{
@@ -40,22 +42,34 @@ a{
     width: 100%;
 }
 
-#social{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: space-evenly;
-}
-
-/* .buttons{
+#socials{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
 
-} */
+.buttons{
+    background-color: #7C7197;
+    border-radius: 10px;
+    height: 3rem;
+    width: 8.4rem;
+}
+
+.buttons>a{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
 
 .buttons img{
     width: 2rem;
     height: 2rem;
 }
 
+a p{
+    font-family: 'Poppins', sans-serif;
+    word-wrap: break-word;
+}
